# src/app/module/user/user.route.ts
@@ -1,0 +1,13 @@
+import { Router } from "express";
+import { Role } from "../../../generated/prisma/enums";
+import { auth } from "../../middleware/checkAuth";
+import { userController } from "./user.controller";
+
+const router = Router();
+
+router.get(
+  "/me",
+  auth(Role.ADMIN, Role.TECHNICIAN, Role.CUSTOMER),
+  userController.me,
+);
+export const userRoute = router;
